--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 GENIUS_API_KEY=r8GXhM6vdeI8WhGtxGMku4dWpX022Q-_vwzUCRb3DRIauiDDcmJK4JXZKyiUFxrU
+MONGO_URL=mongodb+srv://Guy:Guy12345@cluster0.yy3grzp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
