--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GENIUS_API_KEY=r8GXhM6vdeI8WhGtxGMku4dWpX022Q-_vwzUCRb3DRIauiDDcmJK4JXZKyiUFxrU
 MONGO_URL=mongodb+srv://Guy:Guy12345@cluster0.yy3grzp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CLIENT_SECRET=2054cb83cd7044bc94bcd248fa5d4efa
+CLIENT_ID=1c050b057d7c4a9d89225fabe0c0bed7
